tests/rosetta/out/Java/count-in-octal-3.error
javac: exit status 1
/tmp/CountInOctal3.java:21: error: incompatible types: double cannot be converted to String
            System.out.println(toOct(Integer.parseInt(i)));
                                                      ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
