tests/rosetta/out/Java/count-in-octal-3.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// count-in-octal-3.mochi
public class CountInOctal3 {
    static String toOct(int n) {
        if (n == 0) {
            return "0";
        }
        String digits = "01234567";
        String out = "";
        int v = n;
        while (v > 0) {
            int d = v % 8;
            out = digits.substring(d, d + 1) + out;
            v = (int)(v / 8);
        }
        return out;
    }
    static void main() {
        double i = 0.000000;
        while (true) {
            System.out.println(toOct(Integer.parseInt(i)));
            double next = i + 1.000000;
            if (next == i) {
                break;
            }
            i = next;
        }
    }
    public static void main(String[] args) {
        main();
    }
}
